--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/HikariCP-4.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/slf4j-api-1.7.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/ojdbc8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
