--- a/.classpath
+++ b/.classpath
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/HikariCP-4.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/slf4j-api-1.7.30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/ojdbc8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/ASUS/Documents/ms김현식/JAVA/lib/ojdbc8.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/ASUS/Documents/ms김현식/JAVA/lib/HikariCP-4.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASUS/Documents/ms김현식/JAVA/lib/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ASUS/Documents/ms김현식/JAVA/lib/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
