--- a/.classpath
+++ b/.classpath
@@ -6,9 +6,13 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/HikariCP-4.0.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/jdatepicker-1.3.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/ojdbc8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/xoghk/OneDrive/바탕 화면/공부/국비/git/first_project_bykgitbank/files/slf4j-api-1.7.30.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/git/first_project_bykgitbank/files/ojdbc8.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/user/git/first_project_bykgitbank/files/HikariCP-4.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/git/first_project_bykgitbank/files/jdatepicker-1.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/user/git/first_project_bykgitbank/files/slf4j-api-1.7.30.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
